--- a/src/content/intro.mdx
+++ b/src/content/intro.mdx
@@ -1,3 +1,1 @@
-## Hi I'm David
-
-This is a fine example of something or other.
+**Hi, I’m David Demaree**, a web coder, writer, and photographer based in suburban NYC. This is my website where I write about tech, business, digital culture, and whatever else. I love good coffee, mechanical keyboards, Legos, my family, and my dog, not necessarily in that order.
