--- a/src/content/blog/monkeys-typewriters/index.mdx
+++ b/src/content/blog/monkeys-typewriters/index.mdx
@@ -7,16 +7,19 @@ excerpt: >-
 subtitle: ''
 cover: ./cover-monkeys-typewriters.png
 ---
+
+import coverImage from './cover-monkeys-typewriters.png';
+
 <figure class="alignwide">
-  <img src="./cover-monkeys-typewriters.png" alt="Skeleton typing a letter to his wife" width="1024" height="1024" />
+  <img src={coverImage.src} alt="Skeleton typing a letter to his wife" width="1024" height="1024" />
   <figcaption>"Skeleton typing a letter to his wife"</figcaption>
 </figure>
 
-This week I saw [a Reddit post about someone using OpenAI’s “DaVinci” GPT-3 natural language AI model to generate outlines and even first drafts of schoolwork](https://www.reddit.com/r/OpenAI/comments/xlvygv/artifical_intelligence_allows_me_to_get_straight/?utm_source=share&utm_medium=web2x&context=3). Until recently, I’d been an AI luddite — I didn’t really understood how/where people were playing with these models, and sentences like “GPT-3 can write a novel” didn’t sound threatening so much as unrealistic. _Um, no? Computers can’t do that?_
+This week I saw [a Reddit post about someone using OpenAI's “DaVinci” GPT-3 natural language AI model to generate outlines and even first drafts of schoolwork](https://www.reddit.com/r/OpenAI/comments/xlvygv/artifical_intelligence_allows_me_to_get_straight/?utm_source=share&utm_medium=web2x&context=3). Until recently, I'd been an AI luddite — I didn’t really understood how/where people were playing with these models, and sentences like “GPT-3 can write a novel” didn’t sound threatening so much as unrealistic. _Um, no? Computers can’t do that?_
 
 I don’t know what it was about this schoolwork-via-robot scheme that finally piqued my interest, but I signed up for an OpenAI account and started messing around in [their playground app](https://beta.openai.com/playground) to see what it could do.
 
-<figure class="wp-block-embed is-type-rich is-provider-twitter wp-block-embed-twitter"><div class="wp-block-embed__wrapper"><blockquote class="twitter-tweet" data-width="500" data-dnt="true"><p lang="en" dir="ltr">“Assassination is a complex and difficult profession,” writes GPT-3 <a href="https://t.co/L2IVVtn3er">pic.twitter.com/L2IVVtn3er</a></p>— David Demaree (@ddemaree) <a href="https://twitter.com/ddemaree/status/1573846119527972865?ref_src=twsrc%5Etfw">September 25, 2022</a></blockquote><script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div></figure>
+<figure class="wp-block-embed is-type-rich is-provider-twitter wp-block-embed-twitter"><div class="wp-block-embed__wrapper"><blockquote class="twitter-tweet" data-width="500" data-dnt="true"><p lang="en" dir="ltr">“Assassination is a complex and difficult profession,” writes GPT-3 <a href="https://t.co/L2IVVtn3er">pic.twitter.com/L2IVVtn3er</a></p>— David Demaree (@ddemaree) <a href="https://twitter.com/ddemaree/status/1573846119527972865?ref_src=twsrc%5Etfw">September 25, 2022</a></blockquote></div></figure>
 
 I’m reminded of one of my favorite scene-setting details in fiction, from Neil Gaiman’s _Neverwhere_, where he describes characters as wearing “the kind of suits that might have been made by a tailor two hundred years ago who had had a modern suit described to him but had never actually seen one.” Much of the output of these AI models, whether written or visual, is _technically_ accurate, but still, uncanny.
 
@@ -26,13 +29,19 @@ Midjourney seems to prefer pictures of people to landscapes, and is _terrible_ a
 
 For example, prompts referring to [“David S. Pumpkins”](https://en.wikipedia.org/wiki/David_S._Pumpkins) get images that are _sort of_ on the right track—high foreheads, pale skin, curly black hair, as if it understands that this person shares attributes with Tom Hanks, but can’t quite make the leap that he _is_ Tom Hanks unless I say so. And it can _usually_ understand that “David S. Pumpkins” is a man with pumpkins on his suit, but often takes that to absurd places (and sometimes goes pumpkin-y in the wrong places, like the face.)
 
-<figure class="wp-block-image size-large"><img decoding="async" src="https://mj-gallery.com/4279af4e-d168-4b8d-b2f0-020668b21afb/grid_0.png" alt=""><figcaption>“David S. Pumpkins portrait in the style of Rembrandt”</figcaption></figure>
+<figure class="wp-block-image size-large">
+  <img decoding="async" src="https://mj-gallery.com/4279af4e-d168-4b8d-b2f0-020668b21afb/grid_0.png" alt="" />
+  <figcaption>"David S. Pumpkins portrait in the style of Rembrandt"</figcaption>
+</figure>
 
-<figure class="wp-block-image size-large"><img decoding="async" src="https://mj-gallery.com/59934068-5043-4d01-a471-3f6425a581d5/grid_0.png" alt=""><figcaption>“Tom Hanks as David S Pumpkins”</figcaption></figure>
+<figure class="wp-block-image size-large">
+  <img decoding="async" src="https://mj-gallery.com/59934068-5043-4d01-a471-3f6425a581d5/grid_0.png" alt="" />
+  <figcaption>“Tom Hanks as David S Pumpkins”</figcaption>
+</figure>
 
 Coming back to DaVinci and GPT-3, I had asked it to write posts about video game consoles, about explaining football to my third grader, about using football as an analogy to explain the Electoral College to my third grader.
 
-<figure class="wp-block-image size-large"><img decoding="async" loading="lazy" width="1024" height="614" src="https://wp2.demaree.me/wp-content/uploads/2022/09/image-1024x614.png" alt="" class="wp-image-6067" srcset="https://wp2.demaree.me/wp-content/uploads/2022/09/image-1024x614.png 1024w, https://wp2.demaree.me/wp-content/uploads/2022/09/image-300x180.png 300w, https://wp2.demaree.me/wp-content/uploads/2022/09/image-768x460.png 768w, https://wp2.demaree.me/wp-content/uploads/2022/09/image.png 1400w" sizes="(max-width: 1024px) 100vw, 1024px"></figure>
+<figure class="wp-block-image size-large"><img decoding="async" loading="lazy" width="1024" height="614" src="https://wp2.demaree.me/wp-content/uploads/2022/09/image-1024x614.png" alt="" class="wp-image-6067" srcset="https://wp2.demaree.me/wp-content/uploads/2022/09/image-1024x614.png 1024w, https://wp2.demaree.me/wp-content/uploads/2022/09/image-300x180.png 300w, https://wp2.demaree.me/wp-content/uploads/2022/09/image-768x460.png 768w, https://wp2.demaree.me/wp-content/uploads/2022/09/image.png 1400w" sizes="(max-width: 1024px) 100vw, 1024px" /></figure>
 
 Eventually, I wondered if DaVinci could convincingly write a blog post about what it means to be a good product manager in 2022. I gave it some prompts, cleaned up the output, then re-ran everything again and again to flesh out the details. The result was [a story I posted to my Medium profile this morning](https://ddemaree_old.medium.com/how-good-pms-work-in-2022-552f300d3ea3):
 
@@ -54,9 +63,12 @@ And, practically, if it’s OK (even expected) to draw ideas from prior art in a
 
 Even now, having gotten into Midjourney and OpenAI’s Playground tool, there’s a big difference between “writing” or “painting” and whatever these tools do, as evidenced by my fake PM thought leadership post above. The models will only ever be as good as their seed data; Midjourney seems to really like glowing halos, and landscapes that seem realistic at a distance but make no sense when you zoom in.
 
-<figure class="wp-block-image"><img decoding="async" src="https://miro.medium.com/max/1400/0*kuBhDt7l94o3wH5G.png" alt=""><figcaption>“hyperrealistic cyberpunk mountains, green sky, lightning, flying insects, unreal engine, high contrast, 8K” — generated by me using&nbsp;<a href="https://midjourney.com/" rel="noreferrer noopener" target="_blank">Midjourney</a></figcaption></figure>
+<figure class="wp-block-image"><img decoding="async" src="https://miro.medium.com/max/1400/0*kuBhDt7l94o3wH5G.png" alt="" /><figcaption>“hyperrealistic cyberpunk mountains, green sky, lightning, flying insects, unreal engine, high contrast, 8K” — generated by me using&nbsp;<a href="https://midjourney.com/" rel="noreferrer noopener" target="_blank">Midjourney</a></figcaption></figure>
 
-<figure class="wp-block-image"><img decoding="async" src="https://miro.medium.com/max/1024/0*BRzWG2-fgBkvftnG.png" alt=""><figcaption>“one hundred rabbits sitting in a circle around a giant carrot embedded in the ground at nightfall, unreal engine 5, 4K, realistic” — generated by me using&nbsp;<a href="https://midjourney.com/" rel="noreferrer noopener" target="_blank">Midjourney</a></figcaption></figure>
+<figure class="wp-block-image">
+  <img decoding="async" src="https://miro.medium.com/max/1024/0*BRzWG2-fgBkvftnG.png" alt="" />
+  <figcaption>“one hundred rabbits sitting in a circle around a giant carrot embedded in the ground at nightfall, unreal engine 5, 4K, realistic” — generated by me using&nbsp;<a href="https://midjourney.com/" rel="noreferrer noopener" target="_blank">Midjourney</a></figcaption>
+</figure>
 
 My fake thought leader post was partly a lark, partly an experiment to see what happens when you give algorithms a taste of their own medicine. I’m still not sure what I think about all of this—generating content with AIs is a fun, sometimes surprising mirror on the collective output of the internet.
 
